--- a/example-drone-sim.service
+++ b/example-drone-sim.service
@@ -7,7 +7,7 @@ Wants=network-online.target
 User=dronepilot
 WorkingDirectory=/home/dronepilot/ardupilot/ArduCopter
 Environment="PATH=/home/dronepilot/venv-ardupilot/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
-ExecStart=/home/dronepilot/ardupilot/Tools/autotest/sim_vehicle.py -v ArduCopter -C --mavproxy-args="--daemon" --out=udp:0.0.0.0:14550 --out tcpin:0.0.0.0:5678  --custom-location=33.64586111,-117.84275,25,0
+ExecStart=/home/dronepilot/ardupilot/Tools/autotest/sim_vehicle.py -v ArduCopter -C --mavproxy-args="--daemon" --out=udp:0.0.0.0:14550 --out tcpin:0.0.0.0:5678 --out tcpin:0.0.0.0:6789 --custom-location=33.64586111,-117.84275,25,0
 Restart=on-failure
 
 [Install]
